--- a/index.html
+++ b/index.html
@@ -13,12 +13,18 @@
   <link rel="icon" href="https://vuejs.org/images/logo.png"> 
 
   <style>
-  .form-control {
-    margin-bottom: 10px;
-  }
-  .btn-danger {
-    margin-top: 8px;
-  }
+    .form-control {
+      margin-bottom: 10px;font-size: 12.5px;
+    }
+    .btn-danger {
+      margin-top: 8px;
+    }
+    body{
+      font-family: 'Lucida Grande',Tahoma,Verdana,Arial,Sans-Serif;
+    }
+    .list-group-item-text{
+      font-size: 12.5px;
+    }
   </style>
 </head>
 <body>
@@ -34,28 +40,61 @@
   <div class="container" id="events">
 
     <!-- Add an event form -->
-    <div class="col-sm-7">
+    <div class="col-sm-6">
       <div class="panel panel-default">
+
         <div class="panel-heading">
           <h3>Add an Event</h3>
         </div>
-        <div class="panel-body">
 
+        <div class="panel-body">
+          <div class="form-group">
+            <input class="form-control" placeholder="Event Name" v-model="event.name">
+          </div>
+
+          <div class="form-group">
+            <textarea class="form-control" placeholder="Event Description" v-model="event.description"></textarea>
+          </div>
+
+          <div class="form-group">
+            <input type="date" class="form-control" placeholder="Date" v-model="event.date">
+          </div>
+
+          <button class="btn btn-primary" @click="addEvent">Submit</button>
         </div>
+
       </div>
     </div>
 
     <!-- Show the events -->
-    <div class="col-sm-5">
+    <div class="col-sm-6">
       <div class="list-group">
+
+        <a href="#" class="list-group-item" v-for="event in events">
+
+          <h4 class="list-group-item-heading">
+            <i class="glyphicon glyphicon-bullhorn text-primary"></i> 
+            {{ event.name }}
+          </h4>
+
+          <h5>
+            <i class="glyphicon glyphicon-calendar" v-if="event.date"></i> 
+            {{ event.date }}
+          </h5>
+
+          <p class="list-group-item-text" v-if="event.description">{{ event.description }}</p>
+
+          <button class="btn btn-xs btn-danger" @click="deleteEvent($index)">Delete</button>
+
+        </a>
 
       </div>
     </div>
   </div>
 
   <!-- JS -->
-  <script src="node_modules/vue/dist/vue.min.js"></script>
-  <script src="node_modules/vue-resource/dist/vue-resource.min.js"></script>
+  <script src="node_modules/vue/dist/vue.js"></script>
+  <script src="node_modules/vue-resource/dist/vue-resource.js"></script>
   <script src="app.js"></script>
 </body>
 </html>
