--- a/index.html
+++ b/index.html
@@ -70,7 +70,7 @@
     <div class="col-sm-6">
       <div class="list-group">
 
-        <a href="#" class="list-group-item" v-for="event in events">
+        <a href="javascript:void(0);" class="list-group-item" v-for="(event, index) in events">
 
           <h4 class="list-group-item-heading">
             <i class="glyphicon glyphicon-bullhorn text-primary"></i> 
@@ -84,7 +84,7 @@
 
           <p class="list-group-item-text" v-if="event.description">{{ event.description }}</p>
 
-          <button class="btn btn-xs btn-danger" @click="deleteEvent($index)">Delete</button>
+          <button class="btn btn-xs btn-danger" @click="deleteEvent(index)">Delete</button>
 
         </a>
 
